--- a/tensorflow_readfile.ipynb
+++ b/tensorflow_readfile.ipynb
@@ -2,36 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/a59347/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import pandas as pd\n",
-    "import urllib.request"
+    "import urllib.request\n",
+    "sess = tf.InteractiveSession()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('data.csv', <http.client.HTTPMessage at 0x1814229e80>)"
+       "('data.csv', <http.client.HTTPMessage at 0x1815731668>)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +170,7 @@
        "4     2  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,39 +182,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<dtype: 'string'>\n",
+      "()\n",
       "car\n",
-      "Tensor(\"IteratorGetNext:1\", shape=(?,), dtype=string)\n",
+      "Tensor(\"IteratorGetNext_2:1\", shape=(?,), dtype=string)\n",
       "cyl\n",
-      "Tensor(\"IteratorGetNext:3\", shape=(?,), dtype=int32)\n",
+      "Tensor(\"IteratorGetNext_2:3\", shape=(?,), dtype=int32)\n",
       "disp\n",
-      "Tensor(\"IteratorGetNext:4\", shape=(?,), dtype=float32)\n",
+      "Tensor(\"IteratorGetNext_2:4\", shape=(?,), dtype=float32)\n",
       "hp\n",
-      "Tensor(\"IteratorGetNext:7\", shape=(?,), dtype=int32)\n",
+      "Tensor(\"IteratorGetNext_2:7\", shape=(?,), dtype=int32)\n",
       "drat\n",
-      "Tensor(\"IteratorGetNext:5\", shape=(?,), dtype=float32)\n",
+      "Tensor(\"IteratorGetNext_2:5\", shape=(?,), dtype=float32)\n",
       "wt\n",
-      "Tensor(\"IteratorGetNext:10\", shape=(?,), dtype=float32)\n",
+      "Tensor(\"IteratorGetNext_2:10\", shape=(?,), dtype=float32)\n",
       "qsec\n",
-      "Tensor(\"IteratorGetNext:8\", shape=(?,), dtype=float32)\n",
+      "Tensor(\"IteratorGetNext_2:8\", shape=(?,), dtype=float32)\n",
       "vs\n",
-      "Tensor(\"IteratorGetNext:9\", shape=(?,), dtype=int32)\n",
+      "Tensor(\"IteratorGetNext_2:9\", shape=(?,), dtype=int32)\n",
       "am\n",
-      "Tensor(\"IteratorGetNext:0\", shape=(?,), dtype=int32)\n",
+      "Tensor(\"IteratorGetNext_2:0\", shape=(?,), dtype=int32)\n",
       "gear\n",
-      "Tensor(\"IteratorGetNext:6\", shape=(?,), dtype=int32)\n",
+      "Tensor(\"IteratorGetNext_2:6\", shape=(?,), dtype=int32)\n",
       "carb\n",
-      "Tensor(\"IteratorGetNext:2\", shape=(?,), dtype=int32)\n",
+      "Tensor(\"IteratorGetNext_2:2\", shape=(?,), dtype=int32)\n",
       "----------\n",
-      "Tensor(\"IteratorGetNext:11\", shape=(?,), dtype=bool)\n",
+      "Tensor(\"IteratorGetNext_2:11\", shape=(?,), dtype=bool)\n",
       "----------\n",
-      "({'car': <tf.Tensor 'IteratorGetNext:1' shape=(?,) dtype=string>, 'cyl': <tf.Tensor 'IteratorGetNext:3' shape=(?,) dtype=int32>, 'disp': <tf.Tensor 'IteratorGetNext:4' shape=(?,) dtype=float32>, 'hp': <tf.Tensor 'IteratorGetNext:7' shape=(?,) dtype=int32>, 'drat': <tf.Tensor 'IteratorGetNext:5' shape=(?,) dtype=float32>, 'wt': <tf.Tensor 'IteratorGetNext:10' shape=(?,) dtype=float32>, 'qsec': <tf.Tensor 'IteratorGetNext:8' shape=(?,) dtype=float32>, 'vs': <tf.Tensor 'IteratorGetNext:9' shape=(?,) dtype=int32>, 'am': <tf.Tensor 'IteratorGetNext:0' shape=(?,) dtype=int32>, 'gear': <tf.Tensor 'IteratorGetNext:6' shape=(?,) dtype=int32>, 'carb': <tf.Tensor 'IteratorGetNext:2' shape=(?,) dtype=int32>}, <tf.Tensor 'IteratorGetNext:11' shape=(?,) dtype=bool>)\n"
+      "({'car': <tf.Tensor 'IteratorGetNext_2:1' shape=(?,) dtype=string>, 'cyl': <tf.Tensor 'IteratorGetNext_2:3' shape=(?,) dtype=int32>, 'disp': <tf.Tensor 'IteratorGetNext_2:4' shape=(?,) dtype=float32>, 'hp': <tf.Tensor 'IteratorGetNext_2:7' shape=(?,) dtype=int32>, 'drat': <tf.Tensor 'IteratorGetNext_2:5' shape=(?,) dtype=float32>, 'wt': <tf.Tensor 'IteratorGetNext_2:10' shape=(?,) dtype=float32>, 'qsec': <tf.Tensor 'IteratorGetNext_2:8' shape=(?,) dtype=float32>, 'vs': <tf.Tensor 'IteratorGetNext_2:9' shape=(?,) dtype=int32>, 'am': <tf.Tensor 'IteratorGetNext_2:0' shape=(?,) dtype=int32>, 'gear': <tf.Tensor 'IteratorGetNext_2:6' shape=(?,) dtype=int32>, 'carb': <tf.Tensor 'IteratorGetNext_2:2' shape=(?,) dtype=int32>}, <tf.Tensor 'IteratorGetNext_2:11' shape=(?,) dtype=bool>)\n"
      ]
     }
    ],
@@ -263,6 +257,8 @@
     "        return features, tf.greater(labels, mpg_threshold)\n",
     "\n",
     "    dataset = tf.data.TextLineDataset(data_file)\n",
+    "    print(dataset.output_types)\n",
+    "    print(dataset.output_shapes)\n",
     "    dataset = dataset.map(parse_csv, num_parallel_calls=5)\n",
     "\n",
     "    # We call repeat after shuffling, rather than before, to prevent separate\n",
