added the description so it is easier to link to the blog and tutorial

--- a/tensorflow_features.ipynb
+++ b/tensorflow_features.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Tutorial](https://www.tensorflow.org/tutorials/wide), [source code](https://github.com/tensorflow/models/blob/master/official/wide_deep/wide_deep.py) and [my blog article](https://wordpress.com/post/datafireball.com/4097). \n",
+    "\n",
+    "This notebook mostly revolves around how to read in CSV data as demonstrated in the the tensorflow wide_deep example. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
@@ -11,6 +20,15 @@
     "import tempfile\n",
     "sess = tf.InteractiveSession()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
