found a few interesting functions, tf.estimator.inputs.pandas_input_fn to easily feed data into a tensorflow, but the estimator performance is mysteriously wrong

--- a/tensorflow_features.ipynb
+++ b/tensorflow_features.ipynb
@@ -152,25 +152,25 @@
    },
    "outputs": [],
    "source": [
-    "_CSV_COLUMN_DEFAULTS = [[0],[0]]\n",
-    "_CSV_COLUMNS = ['x', 'y']\n",
+    "    _CSV_COLUMN_DEFAULTS = [[0],[0]]\n",
+    "    _CSV_COLUMNS = ['x', 'y']\n",
     "\n",
-    "def input_fn(data_file):\n",
+    "    def input_fn(data_file):\n",
     "\n",
-    "    def parse_csv(value):\n",
-    "        print('Parsing', data_file)\n",
-    "        columns = tf.decode_csv(value, record_defaults=_CSV_COLUMN_DEFAULTS)\n",
-    "        features = dict(zip(_CSV_COLUMNS, columns))\n",
-    "        labels = features.pop('y')\n",
-    "        return features, labels\n",
+    "        def parse_csv(value):\n",
+    "            print('Parsing', data_file)\n",
+    "            columns = tf.decode_csv(value, record_defaults=_CSV_COLUMN_DEFAULTS)\n",
+    "            features = dict(zip(_CSV_COLUMNS, columns))\n",
+    "            labels = features.pop('y')\n",
+    "            return features, labels\n",
     "\n",
-    "    # Extract lines from input files using the Dataset API.\n",
-    "    dataset = tf.data.TextLineDataset(data_file)\n",
-    "    dataset = dataset.map(parse_csv)\n",
+    "        # Extract lines from input files using the Dataset API.\n",
+    "        dataset = tf.data.TextLineDataset(data_file)\n",
+    "        dataset = dataset.map(parse_csv)\n",
     "\n",
-    "    iterator = dataset.make_one_shot_iterator()\n",
-    "    features, labels = iterator.get_next()\n",
-    "    return features, labels"
+    "        iterator = dataset.make_one_shot_iterator()\n",
+    "        features, labels = iterator.get_next()\n",
+    "        return features, labels"
    ]
   },
   {
@@ -220,6 +220,70 @@
     "model = tf.estimator.LinearRegressor(model_dir=model_dir, feature_columns=base_columns)\n",
     "\n",
     "model = model.train(input_fn=lambda: input_fn(data_file=file_path))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [pandas_input_fn](https://www.tensorflow.org/api_docs/python/tf/estimator/inputs/pandas_input_fn)\n",
+    "\n",
+    "The code works but the output does not look right, the ideal prediction will be 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Using default config.\n",
+      "INFO:tensorflow:Using config: {'_model_dir': '/tmp/tmp_9gozif0', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': None, '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': 100, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x7f94eaf32b00>, '_task_type': 'worker', '_task_id': 0, '_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1}\n",
+      "INFO:tensorflow:Create CheckpointSaverHook.\n",
+      "INFO:tensorflow:Saving checkpoints for 1 into /tmp/tmp_9gozif0/model.ckpt.\n",
+      "INFO:tensorflow:loss = 285.0, step = 1\n",
+      "INFO:tensorflow:Loss for final step: 285.0.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_dir = tempfile.mkdtemp()\n",
+    "x=tf.feature_column.numeric_column('x')\n",
+    "model = tf.estimator.LinearRegressor(model_dir=model_dir, feature_columns=[x])\n",
+    "train_input_fn = tf.estimator.inputs.pandas_input_fn(\n",
+    "    x=pd.DataFrame({\"x\":range(10)}), \n",
+    "    y=pd.Series(range(10)),\n",
+    "    shuffle=False\n",
+    ")\n",
+    "model.train(input_fn=train_input_fn, max_steps=10000)\n",
+    "res = model.predict(\n",
+    "    input_fn=tf.estimator.inputs.pandas_input_fn(\n",
+    "        x=pd.DataFrame({\"x\":[5,6]}), \n",
+    "        shuffle=False)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from /tmp/tmp_9gozif0/model.ckpt-1\n",
+      "{'predictions': array([ 1.19999874], dtype=float32)}\n",
+      "{'predictions': array([ 1.39999866], dtype=float32)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for e in res:\n",
+    "    print(e)"
    ]
   },
   {
